--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -19,3 +19,8 @@ $title: #363838;
   font-weight: 600;
 }
 // === / FONTS ===
+
+// === TRANSITION ===
+$transition: all .5s;
+$transition-slower: all 1.5s;
+// === / TRANSITION ===
