--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -361,7 +361,7 @@
 
 // === WORKFLOW ===
 .workflow {
-  padding: 80px 0 110px;
+  padding: 80px 0 20px;
 
   &__title {
     margin-bottom: 40px;
@@ -370,9 +370,6 @@
     line-height: 51px;
     text-align: center;
     color: $title;
-  }
-
-  &__items {
   }
 
   &__items-box {
@@ -406,7 +403,7 @@
     margin-left: 317px;
 
     &::after {
-      content: '';
+      content: "";
       position: absolute;
       bottom: 0;
       left: 0;
@@ -416,12 +413,12 @@
     }
   }
 
-  &__item--measurements{
+  &__item--measurements {
     padding-top: 38px;
     margin-left: 306px;
 
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       top: 0;
       left: 0;
@@ -434,9 +431,6 @@
   &__item--production,
   &__item--consultation {
     padding-bottom: 38px;
-  }
-
-  &__item-image {
   }
 
   &__item-title {
@@ -452,6 +446,58 @@
   }
 }
 // === / WORKFLOW ===
+
+// === GALLERY ===
+.gallery {
+  padding: 90px 0;
+
+  &__buttons {
+    margin-bottom: 40px;
+    text-align: center;
+  }
+
+  &__button {
+    margin: 0 13px;
+    border: 1px solid rgba(#454647, 0.5);
+    border-radius: 20px;
+    padding: 6px 16px;
+    font-weight: 600;
+    font-size: 14px;
+    color: #8f8d8d;
+    background-color: transparent;
+    cursor: pointer;
+  }
+
+  .mixitup-control-active {
+    border: 1px solid #ffef35;
+    color: $title;
+    background-color: #ffef35;
+    -moz-outline-radius: 20px;
+  }
+
+  &__inner {
+  }
+
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 30px 34px;
+  }
+
+  &__item:first-child {
+    grid-column: span 2;
+    grid-row: span 2;
+  }
+
+  &__image {
+    object-fit: cover;
+    max-width: 1150px;
+    width: 100%;
+    height: 100%;
+  }
+}
+// === / GALLERY ===
 
 // === FOOTER ===
 .footer {
