--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -32,33 +32,41 @@ body {
 }
 
 .container-fluid {
-	margin: 0 auto;
-	padding: 0 10px;
-	max-width: 1920px;
+  margin: 0 auto;
+  padding: 0 10px;
+  max-width: 1920px;
+}
+
+.title {
+  text-align: center;
+  @extend %montserrat-700;
+  font-size: 36px;
+  line-height: 51px;
+  color: $title;
 }
 
 .slick-dots {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-	li {
-		margin: 0 15px;
-	}
+  li {
+    margin: 0 15px;
+  }
 
-	li.slick-active {
-			button{
-				background-color: #ffef35;
-			}
-		}
+  li.slick-active {
+    button {
+      background-color: #ffef35;
+    }
+  }
 
-	button {
-		border: none;
-		border-radius: 50%;
-		padding: 0;
-		width: 8px;
-		height: 8px;
-		font-size: 0;
-		background-color: $title;
-	}
+  button {
+    border: none;
+    border-radius: 50%;
+    padding: 0;
+    width: 8px;
+    height: 8px;
+    font-size: 0;
+    background-color: $title;
+  }
 }
