--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -36,7 +36,7 @@
     line-height: 22px;
   }
   &__list-link--active {
-    border-bottom: 2px solid rgba($title, .7);
+    border-bottom: 2px solid rgba($title, 0.7);
     border-radius: 1px;
     padding-bottom: 4px;
   }
@@ -113,25 +113,25 @@
 
 .breadcrumbs {
   padding: 13px 14px;
-  background-color: rgba(#DFDFDF, .5);
+  background-color: rgba(#dfdfdf, 0.5);
 
-		&__list {
-      display: flex;
-		}
+  &__list {
+    display: flex;
+  }
 
-		&__item::after {
-      content: '/';
-      margin-left: -3px;
-      margin-right: 4px;
-		}
-    &__item:last-child::after{
-      display: none;
-    }
+  &__item::after {
+    content: "/";
+    margin-left: -3px;
+    margin-right: 4px;
+  }
+  &__item:last-child::after {
+    display: none;
+  }
 
-		&__link {
-      font-size: 14px;
-      color: $default;
-		}
+  &__link {
+    font-size: 14px;
+    color: $default;
+  }
 }
 // === / REUSABLE BLOCKS ===
 
@@ -519,111 +519,194 @@
 .blog-box {
   padding-bottom: 100px;
 
-		&__title {
-      margin: 0 auto 30px;
-      max-width: 430px;
-		}
+  &__title {
+    margin: 0 auto 30px;
+    max-width: 430px;
+  }
 
-		&__items {
-      display: grid;
+  &__items {
+    display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 30px;
-		}
+  }
 
-		&__image-link {
-      display: inline-block;
-      margin-bottom: 20px;
-		}
+  &__image-link {
+    display: inline-block;
+    margin-bottom: 20px;
+  }
 
-		&__links {
-      margin-bottom: 7px;
-      @extend %open-sans-600;
-      font-size: 14px;
-      color: #707070;
-		}
+  &__links {
+    margin-bottom: 7px;
+    @extend %open-sans-600;
+    font-size: 14px;
+    color: #707070;
+  }
 
-		&__date,
-    &__author,
-    &__theme {
-      color: inherit;
-		}
+  &__date,
+  &__author,
+  &__theme {
+    color: inherit;
+  }
 
-		&__item-title {
-      @extend %montserrat-700;
-      font-size: 24px;
-      line-height: 38px;
-      color: $title;
-		}
+  &__item-title {
+    @extend %montserrat-700;
+    font-size: 24px;
+    line-height: 38px;
+    color: $title;
+  }
 }
 // === / BLOG-BOX ===
 
 // === ABOUT ===
 .about {
+  &__preview {
+    margin-top: -55px;
+    padding: 160px 0;
+    text-align: center;
+    background-image: url("../images/about-background.jpg");
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+  }
 
-		&__preview {
-      margin-top: -55px;
-      padding: 160px 0;
-      text-align: center;
-      background-image: url('../images/about-background.jpg');
-      background-repeat: no-repeat;
-      background-position: top center;
-      background-size: cover;
-		}
+  &__preview-title {
+    @extend %montserrat-700;
+    font-size: 60px;
+    line-height: 80px;
+    color: $title;
+  }
 
-		&__preview-title {
-      @extend %montserrat-700;
-      font-size: 60px;
-      line-height: 80px;
-      color: $title;
-		}
+  &__content {
+    padding: 100px 0 55px;
+  }
 
-		&__content {
-      padding: 100px 0 55px;
-		}
+  &__title {
+    position: relative;
+    margin-bottom: 23px;
+    padding-bottom: 20px;
+    text-align: left;
 
-		&__title {
-      position: relative;
-      margin-bottom: 23px;
-      padding-bottom: 20px;
-      text-align: left;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 200px;
+      height: 2px;
+      background-color: #979797;
+    }
+  }
 
-      &::after{
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 200px;
-        height: 2px;
-        background-color: #979797;
-      }
-		}
+  &__text {
+    margin-left: 285px;
 
-		&__text {
-      margin-left: 285px;
+    p {
+      margin-bottom: 35px;
+    }
+  }
 
-      p {
-        margin-bottom: 35px;
-      }
-		}
-
-		&__pop-up {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 414px;
-      background-image: url('../images/about-video-pop-up-bg.jpg');
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: top center;
-		}
-
-		&__pop-up-link-to-vid {
-		}
-
-		&__pop-up-play-icon {
-		}
+  &__pop-up {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 414px;
+    background-image: url("../images/about-video-pop-up-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+  }
 }
 // === / ABOUT ===
+
+// === INSPIRATION ===
+.inspiration {
+  position: relative;
+  padding: 100px 0 45px;
+
+  &::after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 414px;
+    background-image: url('../images/inspiration-background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom center;
+  }
+
+  &__inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__image {
+    display: block;
+    margin-right: 78px;
+    margin-left: -226px;
+  }
+
+  &__content {
+    max-width: 824px;
+  }
+
+  &__title {
+    position: relative;
+    margin-bottom: 23px;
+    padding-bottom: 16px;
+    text-align: left;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 200px;
+      height: 2px;
+      background-color: #979797;
+    }
+  }
+
+  &__text {
+    margin-bottom: 35px;
+  }
+
+  &__list {
+  }
+
+  &__item {
+    margin-bottom: 33px;
+  }
+  
+  &__item-content {
+    margin-bottom: 33px;
+    padding-bottom: 14px;
+    display: flex;
+    justify-content: space-between;
+    @extend %montserrat-700;
+    line-height: 23px;
+    color: $title;
+    border-bottom: 2px solid #FFF;
+    border-radius: 4px;
+  }
+
+  &__item-txt {
+  }
+
+  &__item-num {
+  }
+
+  &__line {
+    margin-top: -35px;
+    border-radius: 4px;
+    height: 2px;
+    background-color: $title;
+  }
+}
+// === / INSPIRATION ===
 
 // === FOOTER ===
 .footer {
