--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -834,6 +834,49 @@
 }
 // === / CONTACT ===
 
+// === CONTACT-SLIDER ===
+.contact-slider {
+  margin-bottom: 87px;
+
+		&__item {
+      position: relative;
+
+      &:hover {
+        .contact-slider__title {
+          opacity: 1;
+        }
+      }
+		}
+
+		&__image {
+      margin-bottom: 21px;
+      object-fit: cover;
+      width: 170px;
+      height: 170px;
+		}
+
+		&__title {
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      padding-right: 20px;
+      padding-bottom: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      @extend %montserrat-700;
+      line-height: 22px;
+      color: rgba(54, 56, 56, 0.9033);
+      background-color: rgba(#fff, .6);
+      transition: $transition;
+		}
+}
+// === / CONTACT-SLIDER ===
+
 // === FOOTER ===
 .footer {
   &__content {
