--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -877,6 +877,113 @@
 }
 // === / CONTACT-SLIDER ===
 
+// === BLOG ===
+.blog {
+padding: 60px 0 100px;
+
+		&__inner {
+      display: flex;
+      justify-content: space-between;
+      width: 350px;
+      margin-left: 30px;
+		}
+
+		&__items {
+		}
+
+		&__categories {
+		}
+
+		&__categories-title {
+		}
+
+		&__categories-list {
+		}
+
+		&__categories-item {
+		}
+
+		&__categories-link {
+		}
+
+		&__recent-posts {
+		}
+
+		&__recent-posts-title {
+		}
+
+		&__recent-posts-list {
+		}
+
+		&__recent-posts-item {
+		}
+
+		&__recent-posts-postname {
+		}
+
+		&__recent-posts-date {
+		}
+
+		&__recent-posts-author {
+		}
+
+		&__tags {
+		}
+
+		&__tags-title {
+		}
+
+		&__tags-link {
+		}
+
+		&__social {
+		}
+
+		&__social-item {
+		}
+
+		&__social-link {
+		}
+
+		&__social-icon {
+		}
+}
+
+.aside {
+
+		&__search {
+      position: relative;
+		}
+
+		&__search-input {
+      display: block;
+      border: 1px solid rgba($title, 0.7);
+      border-radius: 20px;
+      padding: 6px 50px 6px 18px;
+      width: 100%;
+
+      &::placeholder {
+        @extend %open-sans-400;
+        font-size: 14px;
+        line-height: 28px;
+        color: #A1A1A1;
+      }
+		}
+
+		&__search-button {
+      position: absolute;
+      top: 10px;
+      right: 11px;
+      border: none;
+      background-color: transparent;
+      cursor: pointer;
+		}
+
+		&__search-icon {
+		}
+}
+// === / BLOG ===
+
 // === FOOTER ===
 .footer {
   &__content {
