--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -733,104 +733,104 @@
 .contact {
   padding-bottom: 100px;
 
-		&__title {
-      position: relative;
-      margin-bottom: 40px;
-      padding-bottom: 29px;
-      text-align: left;
+  &__title {
+    position: relative;
+    margin-bottom: 40px;
+    padding-bottom: 29px;
+    text-align: left;
 
-      &::after{
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 200px;
-        height: 2px;
-        background-color: #6D7278;
-      }
-		}
-
-    &__inner{
-      margin-left: 284px;
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 200px;
+      height: 2px;
+      background-color: #6d7278;
     }
+  }
 
-		&__social {
-      display: flex;
-      margin-left: 3px;
-      margin-bottom: 22px;
-		}
+  &__inner {
+    margin-left: 284px;
+  }
 
-		&__social-item {
-      & + & {
-        margin-left: 40px;
-      }
-		}
+  &__social {
+    display: flex;
+    margin-left: 3px;
+    margin-bottom: 22px;
+  }
 
-    &__text {
-      color: #A1A1A1;
-      margin-bottom: 17px;
+  &__social-item {
+    & + & {
+      margin-left: 40px;
     }
+  }
 
-		&__phone {
-      color: $default;
-		}
+  &__text {
+    color: #a1a1a1;
+    margin-bottom: 17px;
+  }
 
-		&__address {
-      font-style: normal;
-      margin-bottom: 16px;
-		}
+  &__phone {
+    color: $default;
+  }
 
-		&__info-email {
-      margin-bottom: 24px;
-		}
+  &__address {
+    font-style: normal;
+    margin-bottom: 16px;
+  }
 
-		&__form {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-		}
+  &__info-email {
+    margin-bottom: 24px;
+  }
 
-		&__form-input {
-      margin-bottom: 13px;
-      border: 1px solid #DFDFDF;
-      border-radius: 20px;
-      padding: 6px 17px;
-      width: 49.2%;
+  &__form {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
 
-      &::placeholder{
-        @extend %open-sans-400;
-        font-size: 16px;
-        line-height: 27px;
-        color: #A1A1A1;
-      }
-		}
+  &__form-input {
+    margin-bottom: 13px;
+    border: 1px solid #dfdfdf;
+    border-radius: 20px;
+    padding: 6px 17px;
+    width: 49.2%;
 
-		&__form-textarea {
-      margin-bottom: 20px;
-      border: 1px solid #DFDFDF;
-      border-radius: 24px;
-      padding: 14px 17px;
-      width: 100%;
-      min-height: 125px;
-      resize: none;
+    &::placeholder {
+      @extend %open-sans-400;
+      font-size: 16px;
+      line-height: 27px;
+      color: #a1a1a1;
+    }
+  }
 
-      &::placeholder{
-        @extend %open-sans-400;
-        font-size: 16px;
-        line-height: 27px;
-        color: #A1A1A1;
-      }
-		}
+  &__form-textarea {
+    margin-bottom: 20px;
+    border: 1px solid #dfdfdf;
+    border-radius: 24px;
+    padding: 14px 17px;
+    width: 100%;
+    min-height: 125px;
+    resize: none;
 
-		&__form-button {
-      border: none;
-      border-radius: 21px;
-      padding: 7px 70px;
-      @extend %open-sans-600;
-      color: #fffff0;
-      background-color: $title;
-      cursor: pointer;
-		}
+    &::placeholder {
+      @extend %open-sans-400;
+      font-size: 16px;
+      line-height: 27px;
+      color: #a1a1a1;
+    }
+  }
+
+  &__form-button {
+    border: none;
+    border-radius: 21px;
+    padding: 7px 70px;
+    @extend %open-sans-600;
+    color: #fffff0;
+    background-color: $title;
+    cursor: pointer;
+  }
 }
 // === / CONTACT ===
 
@@ -838,149 +838,169 @@
 .contact-slider {
   margin-bottom: 87px;
 
-		&__item {
-      position: relative;
+  &__item {
+    position: relative;
 
-      &:hover {
-        .contact-slider__title {
-          opacity: 1;
-        }
+    &:hover {
+      .contact-slider__title {
+        opacity: 1;
       }
-		}
+    }
+  }
 
-		&__image {
-      margin-bottom: 21px;
-      object-fit: cover;
-      width: 170px;
-      height: 170px;
-		}
+  &__image {
+    margin-bottom: 21px;
+    object-fit: cover;
+    width: 170px;
+    height: 170px;
+  }
 
-		&__title {
-      opacity: 0;
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      padding-right: 20px;
-      padding-bottom: 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      @extend %montserrat-700;
-      line-height: 22px;
-      color: rgba(54, 56, 56, 0.9033);
-      background-color: rgba(#fff, .6);
-      transition: $transition;
-		}
+  &__title {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    @extend %montserrat-700;
+    line-height: 22px;
+    color: rgba(54, 56, 56, 0.9033);
+    background-color: rgba(#fff, 0.6);
+    transition: $transition;
+  }
 }
 // === / CONTACT-SLIDER ===
 
 // === BLOG ===
 .blog {
-padding: 60px 0 100px;
+  padding: 60px 0 100px;
 
-		&__inner {
-      display: flex;
-      justify-content: space-between;
-      width: 350px;
-      margin-left: 30px;
-		}
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
 
-		&__items {
-		}
-
-		&__categories {
-		}
-
-		&__categories-title {
-		}
-
-		&__categories-list {
-		}
-
-		&__categories-item {
-		}
-
-		&__categories-link {
-		}
-
-		&__recent-posts {
-		}
-
-		&__recent-posts-title {
-		}
-
-		&__recent-posts-list {
-		}
-
-		&__recent-posts-item {
-		}
-
-		&__recent-posts-postname {
-		}
-
-		&__recent-posts-date {
-		}
-
-		&__recent-posts-author {
-		}
-
-		&__tags {
-		}
-
-		&__tags-title {
-		}
-
-		&__tags-link {
-		}
-
-		&__social {
-		}
-
-		&__social-item {
-		}
-
-		&__social-link {
-		}
-
-		&__social-icon {
-		}
+  &__items {
+  }
 }
 
 .aside {
+  margin-left: 30px;
+  width: 350px;
 
-		&__search {
-      position: relative;
-		}
+  &__search {
+    position: relative;
+    margin-bottom: 40px;
+  }
 
-		&__search-input {
-      display: block;
-      border: 1px solid rgba($title, 0.7);
-      border-radius: 20px;
-      padding: 6px 50px 6px 18px;
-      width: 100%;
+  &__search-input {
+    display: block;
+    border: 1px solid rgba($title, 0.7);
+    border-radius: 20px;
+    padding: 6px 50px 6px 18px;
+    width: 100%;
 
-      &::placeholder {
-        @extend %open-sans-400;
-        font-size: 14px;
-        line-height: 28px;
-        color: #A1A1A1;
-      }
-		}
+    &::placeholder {
+      @extend %open-sans-400;
+      font-size: 14px;
+      line-height: 28px;
+      color: #a1a1a1;
+    }
+  }
 
-		&__search-button {
-      position: absolute;
-      top: 10px;
-      right: 11px;
-      border: none;
-      background-color: transparent;
-      cursor: pointer;
-		}
+  &__search-button {
+    position: absolute;
+    top: 10px;
+    right: 11px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
 
-		&__search-icon {
-		}
+  &__search-icon {
+  }
+
+  &__categories {
+    margin-bottom: 35px;
+  }
+
+  &__categories-title, 
+  &__recent-posts-title,
+  &__tags-title {
+    margin-bottom: 14px;
+    @extend %montserrat-700;
+    line-height: 23px;
+    color: $title;
+  }
+
+  &__categories-list {
+  }
+
+  &__categories-item {
+    margin-bottom: 12px;
+  }
+
+  &__categories-link {
+  }
+
+  &__recent-posts {
+    margin-bottom: 39px;
+  }
+
+  &__recent-posts-list {
+  }
+
+  &__recent-posts-item {
+    margin-bottom: 11px;
+  }
+
+  &__recent-posts-postname {
+    display: block;
+  }
+
+  &__recent-posts-date,
+  &__recent-posts-author {
+    font-size: 14px;
+    color: #a1a1a1;
+  }
+
+  &__tags {
+    margin-bottom: 50px;
+  }
+
+  &__tags-link {
+    display: inline-block;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    border: 1px solid rgba(#454647, .5);
+    border-radius: 14px;
+    padding: 3px 16px;
+    @extend %open-sans-600;
+    font-size: 14px;
+    color: #8f8d8d;
+  }
+
+  &__social {
+    display: flex;
+  }
+
+  &__social-item {
+    & + &{
+      margin-left: 20px;
+    }
+  }
+
+  &__social-link {
+  }
+
+  &__social-icon {
+  }
 }
 // === / BLOG ===
 
