--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -7,6 +7,16 @@
     url('../fonts/Montserrat-Bold.woff') format("woff");
   font-display: swap;
 }
+// ===
+@font-face {
+  font-family: "OpenSans-LightItalic";
+  font-weight: 300;
+  font-style: italic;
+  src: local("OpenSans-LightItalic"),
+    url('../fonts/OpenSans-LightItalic.woff2') format("woff2"),
+    url('../fonts/OpenSans-LightItalic.woff') format("woff");
+  font-display: swap;
+}
 @font-face {
   font-family: "OpenSans-Regular";
   font-weight: 400;
@@ -16,7 +26,6 @@
     url('../fonts/OpenSans-Regular.woff') format("woff");
   font-display: swap;
 }
-// ===
 @font-face {
   font-family: "OpenSans-SemiBold";
   font-weight: 600;
