--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -4,6 +4,12 @@ $title: #363838;
 // === / COLORS ===
 
 // === FONTS ===
+%open-sans-300-italic{
+  font-family: 'OpenSans-Regular', sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
 %open-sans-400{
   font-family: 'OpenSans-Regular', sans-serif;
   font-weight: 400;
