--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,7 +1,28 @@
+// === WIDTH < 992px ===
 @media (max-width: 992px) {
-  
-}
+  .footer__info {
+    max-width: 380px;
+  }
 
+  .footer__social {
+    margin: 0 auto;
+  }
+
+  .footer__menu {
+    margin: 0 auto;
+  }
+}
+// === / WIDTH < 992px ===
+
+// === WIDTH < 930px ===
+@media (max-width: 930px) {
+  .footer__info {
+    max-width: 380px;
+  }
+}
+// === / WIDTH < 930px ===
+
+// === WIDTH < 768px ===
 @media (max-width: 768px) {
   .header__button {
     display: none;
@@ -15,8 +36,24 @@
   .logo {
     margin: 0;
   }
-}
 
+  .footer__inner {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .footer__info {
+    margin-bottom: 50px;
+    width: 100%;
+  }
+
+  .footer__info{
+    max-width: 100%;
+  }
+}
+// === / WIDTH < 768px ===
+
+// === WIDTH < 630px ===
 @media (max-width: 630px) {
   .logo {
     order: -1;
@@ -34,7 +71,7 @@
     background-color: #fff;
     transform: translateY(-350px);
     transition: $transition;
-    
+
     &--opened {
       transform: translateY(20px);
     }
@@ -79,3 +116,26 @@
     }
   }
 }
+// === / WIDTH < 630px ===
+
+// === WIDTH < 375px ===
+@media (max-width: 375px) {
+  .footer__inner{
+    justify-content: space-between;
+  }
+
+  .footer__social{
+    margin-left: 0;
+  }
+
+  .footer__form {
+    display: block;
+  }
+
+  .footer__form-button {
+    width: 100%;
+    margin-top: 15px;
+    margin-left: 0;
+  }
+}
+// === / WIDTH < 375px ===
