--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -118,12 +118,19 @@
 
   &__list {
     display: flex;
+    overflow-x: auto;
+  }
+
+  &__item {
+    position: relative;
+    padding-right: 9px;
   }
 
   &__item::after {
     content: "/";
-    margin-left: -3px;
-    margin-right: 4px;
+    position: absolute;
+    margin-left: 1px;
+    // margin-right: 4px;
   }
   &__item:last-child::after {
     display: none;
@@ -1444,7 +1451,7 @@
   }
   &__menu {
     margin-right: 60px;
-    width: 125px;
+    max-width: 125px;
   }
   &__copyright {
     background-color: $title;
