--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,3 +1,30 @@
+// === WIDTH < 1366px ===
+@media (max-width: 1366px) {
+  .collection {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .collection__image {
+    width: 100%;
+    height: 100%;
+  }
+}
+// === / WIDTH < 1366px ===
+
+// === WIDTH < 1200px ===
+@media (max-width: 1200px) {
+  .top__slider-image {
+    height: 640px;
+  }
+
+  .top__slider-title {
+    font-size: 62px;
+    line-height: 74px;
+  }
+}
+// === / WIDTH < 1200px ===
+
 // === WIDTH < 992px ===
 @media (max-width: 992px) {
   .footer__info {
@@ -21,6 +48,28 @@
   }
 }
 // === / WIDTH < 930px ===
+
+// === WIDTH < 840px ===
+@media (max-width: 840px) {
+  .top__inner::after {
+    height: 100%;
+  }
+
+  .top__slider-image {
+    height: 540px;
+  }
+
+  .top__slider-title {
+    font-size: 44px;
+    line-height: 54px;
+  }
+
+  .collection {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+  }
+}
+// === WIDTH / < 840px ===
 
 // === WIDTH < 768px ===
 @media (max-width: 768px) {
@@ -47,11 +96,32 @@
     width: 100%;
   }
 
-  .footer__info{
+  .footer__info {
     max-width: 100%;
+  }
+
+  .banner-sofa {
+    padding: 50px 0 60px;
+    min-height: auto;
   }
 }
 // === / WIDTH < 768px ===
+
+// === WIDTH < 660px ===
+@media (max-width: 660px) {
+  .top__inner {
+    padding: 30px 0 25px;
+  }
+
+  .top__slider-text {
+    margin-bottom: 25px;
+  }
+
+  .top__slider-item .top__slider-image {
+    display: none;
+  }
+}
+// === / WIDTH < 660px ===
 
 // === WIDTH < 630px ===
 @media (max-width: 630px) {
@@ -115,16 +185,38 @@
       background-color: #000;
     }
   }
+
+  .banner-sofa__title {
+    font-size: 36px;
+    line-height: 51px;
+  }
+
+  .banner-sofa__text {
+    min-width: auto;
+  }
 }
 // === / WIDTH < 630px ===
 
+// === WIDTH < 540px ===
+@media (max-width: 540px) {
+  .title {
+    font-size: 28px;
+    line-height: 36px;
+  }
+
+  .collection {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+// === / WIDTH < 540px ===
+
 // === WIDTH < 375px ===
 @media (max-width: 375px) {
-  .footer__inner{
+  .footer__inner {
     justify-content: space-between;
   }
 
-  .footer__social{
+  .footer__social {
     margin-left: 0;
   }
 
@@ -136,6 +228,10 @@
     width: 100%;
     margin-top: 15px;
     margin-left: 0;
+  }
+
+  .banner-sofa__title {
+    min-width: auto;
   }
 }
 // === / WIDTH < 375px ===
