--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -9,6 +9,10 @@
     width: 100%;
     height: 100%;
   }
+
+  .gallery__items {
+    gap: 20px;
+  }
 }
 // === / WIDTH < 1366px ===
 
@@ -38,6 +42,11 @@
   .footer__menu {
     margin: 0 auto;
   }
+
+  .gallery__button {
+    margin: 0;
+    padding: 6px 10px;
+  }
 }
 // === / WIDTH < 992px ===
 
@@ -66,6 +75,18 @@
 
   .collection {
     grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+  }
+
+  .workflow__item {
+    width: 300px;
+  }
+
+  .workflow__item--production {
+    margin-left: auto;
+  }
+
+  .gallery__items {
     gap: 15px;
   }
 }
@@ -104,6 +125,18 @@
     padding: 50px 0 60px;
     min-height: auto;
   }
+
+  .workflow__item--measurements {
+    margin-left: 100px;
+  }
+
+  .gallery__buttons {
+    display: grid;
+  }
+
+  .gallery__button {
+    margin: 0 10% 10px;
+  }
 }
 // === / WIDTH < 768px ===
 
@@ -119,6 +152,48 @@
 
   .top__slider-item .top__slider-image {
     display: none;
+  }
+
+  .workflow__items-box::after,
+  .workflow__item--measurements::before,
+  .workflow__item--production::after {
+    display: none;
+  }
+
+  .workflow__item {
+    width: 100%;
+  }
+
+  .workflow__items-box {
+    border: none;
+    flex-wrap: wrap;
+  }
+
+  .workflow__item--production {
+    order: 1;
+    margin-left: 0;
+  }
+
+  .workflow__item--measurements {
+    margin-left: 0;
+    padding-top: 0;
+    padding-bottom: 38px;
+  }
+
+  .blog-box__items {
+    display: block;
+  }
+
+  .blog-box__item {
+    margin-bottom: 30px;
+  }
+
+  .blog-box__image-link {
+    display: block;
+  }
+
+  .blog-box__image {
+    width: 100%;
   }
 }
 // === / WIDTH < 660px ===
@@ -194,6 +269,10 @@
   .banner-sofa__text {
     min-width: auto;
   }
+
+  .gallery {
+    padding: 50px 0;
+  }
 }
 // === / WIDTH < 630px ===
 
@@ -207,11 +286,25 @@
   .collection {
     grid-template-columns: repeat(1, 1fr);
   }
+
+  .gallery__items {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .gallery__item:first-child {
+    grid-column: 1;
+    grid-row: 1;
+  }
 }
 // === / WIDTH < 540px ===
 
 // === WIDTH < 375px ===
 @media (max-width: 375px) {
+  .title {
+    font-size: 22px;
+    line-height: 36px;
+  }
+
   .footer__inner {
     justify-content: space-between;
   }
