--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -47,6 +47,14 @@
     margin: 0;
     padding: 6px 10px;
   }
+
+  .about__content {
+    padding: 70px 0 55px;
+  }
+
+  .about__text {
+    margin-left: 0;
+  }
 }
 // === / WIDTH < 992px ===
 
@@ -137,6 +145,14 @@
   .gallery__button {
     margin: 0 10% 10px;
   }
+
+  .about__preview {
+    padding: 80px 0;
+  }
+
+  .inspiration__image {
+    display: none;
+  }
 }
 // === / WIDTH < 768px ===
 
@@ -180,12 +196,16 @@
     padding-bottom: 38px;
   }
 
+  .blog-box {
+    padding-bottom: 50px;
+  }
+
   .blog-box__items {
     display: block;
   }
 
   .blog-box__item {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
   }
 
   .blog-box__image-link {
@@ -294,6 +314,20 @@
   .gallery__item:first-child {
     grid-column: 1;
     grid-row: 1;
+  }
+
+  .gallery.gallery-page .gallery__item:nth-child(8) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+
+  .about__preview-title {
+    font-size: 40px;
+    line-height: 48px;
+  }
+
+  .inspiration__item-txt {
+    margin-right: 10px;
   }
 }
 // === / WIDTH < 540px ===
