--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -738,6 +738,10 @@
 // === MAP ===
 .map {
   margin-bottom: 47px;
+
+  iframe {
+    height: 580px;
+  }
 }
 // === / MAP ===
 
@@ -860,26 +864,33 @@
     }
   }
 
-  &__image {
-    margin-bottom: 21px;
-    object-fit: cover;
-    width: 170px;
-    height: 170px;
-  }
-
-  &__title {
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    padding-right: 20px;
-    padding-bottom: 20px;
+  &__box {
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    width: 170px;
+    height: 170px;
+    // text-align: center;
+  }
+
+  &__image {
+    margin-bottom: 21px;
+    object-fit: cover;
+  }
+
+  &__title {
+    z-index: 10px;
+    // text-align: center;
+    // opacity: 0;
+    // position: absolute;
+    // top: 0;
+    // right: 0;
+    // bottom: 0;
+    // left: 0;
+    // padding-right: 20px;
+    // padding-bottom: 20px;
+
     @extend %montserrat-700;
     line-height: 22px;
     color: rgba(54, 56, 56, 0.9033);
