--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -864,39 +864,43 @@
     }
   }
 
-  &__box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 170px;
-    height: 170px;
-    // text-align: center;
-  }
+  // &__box {
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  //   text-align: center;
+  //   width: 170px;
+  //   height: 170px;
+  //   // text-align: center;
+  // }
 
-  &__image {
-    margin-bottom: 21px;
-    object-fit: cover;
-  }
+  // &__image {
+  //   margin-bottom: 21px;
+  //   object-fit: cover;
+  // }
 
-  &__title {
-    z-index: 10px;
-    // text-align: center;
-    // opacity: 0;
-    // position: absolute;
-    // top: 0;
-    // right: 0;
-    // bottom: 0;
-    // left: 0;
-    // padding-right: 20px;
-    // padding-bottom: 20px;
+  // &__title {
+  //   // display: block;
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+  //   bottom: 0;
+  //   left: 0;
+  //   // text-align: center;
+  //   // opacity: 0;
+  //   // top: 0;
+  //   // right: 0;
+  //   // bottom: 0;
+  //   // left: 0;
+  //   padding-right: 10%;
+  //   padding-top: 33%;
 
-    @extend %montserrat-700;
-    line-height: 22px;
-    color: rgba(54, 56, 56, 0.9033);
-    background-color: rgba(#fff, 0.6);
-    transition: $transition;
-  }
+  //   @extend %montserrat-700;
+  //   line-height: 22px;
+  //   color: rgba(54, 56, 56, 0.9033);
+  //   background-color: rgba(#fff, 0.6);
+  //   transition: $transition;
+  // }
 }
 // === / CONTACT-SLIDER ===
 
