--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -856,51 +856,40 @@
 
   &__item {
     position: relative;
+    margin-bottom: 21px;
+    width: 170px;
+    height: 170px;
 
     &:hover {
-      .contact-slider__title {
+      .contact-slider__link {
         opacity: 1;
       }
     }
   }
 
-  // &__box {
-  //   display: flex;
-  //   justify-content: center;
-  //   align-items: center;
-  //   text-align: center;
-  //   width: 170px;
-  //   height: 170px;
-  //   // text-align: center;
-  // }
+  &__image {
+    object-fit: contain;
+  }
 
-  // &__image {
-  //   margin-bottom: 21px;
-  //   object-fit: cover;
-  // }
-
-  // &__title {
-  //   // display: block;
-  //   position: absolute;
-  //   top: 0;
-  //   right: 0;
-  //   bottom: 0;
-  //   left: 0;
-  //   // text-align: center;
-  //   // opacity: 0;
-  //   // top: 0;
-  //   // right: 0;
-  //   // bottom: 0;
-  //   // left: 0;
-  //   padding-right: 10%;
-  //   padding-top: 33%;
-
-  //   @extend %montserrat-700;
-  //   line-height: 22px;
-  //   color: rgba(54, 56, 56, 0.9033);
-  //   background-color: rgba(#fff, 0.6);
-  //   transition: $transition;
-  // }
+  &__link {
+    position: absolute;
+    padding-right: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    opacity: 0;
+    @extend %montserrat-700;
+    line-height: 22px;
+    color: rgba(54, 56, 56, 0.9033);
+    background-color: rgba(#fff, 0.6);
+    transition: $transition;
+  }
 }
 // === / CONTACT-SLIDER ===
 
