back to how it was before (slider in contact.html)

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,9 +1,9 @@
 // === WIDTH < 1700px ===
-@media (max-width: 1700px) {
-  .contact-slider__image {
-    width: 100%;
-  }
-}
+// @media (max-width: 1700px) {
+//   .contact-slider__image {
+//     width: 100%;
+//   }
+// }
 // === / WIDTH < 1700px ===
 
 // === WIDTH < 1366px ===
