--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -854,41 +854,40 @@
 .contact-slider {
   margin-bottom: 87px;
 
-  &__item {
+  &__link {
     position: relative;
     margin-bottom: 21px;
-    width: 170px;
-    height: 170px;
 
-    &:hover {
-      .contact-slider__link {
+        &:hover {
+      .contact-slider__title {
         opacity: 1;
       }
     }
   }
 
   &__image {
-    object-fit: contain;
+    width: 170px;
+    height: 170px;
+    object-fit: cover;
   }
 
-  &__link {
+  &__title {
     position: absolute;
-    padding-right: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    width: 100%;
+    padding: 0 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     opacity: 0;
     @extend %montserrat-700;
     line-height: 22px;
-    color: rgba(54, 56, 56, 0.9033);
-    background-color: rgba(#fff, 0.6);
+    color: $title;
     transition: $transition;
+    background-color: rgba(#fff, .6);
   }
 }
 // === / CONTACT-SLIDER ===
