--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -854,20 +854,23 @@
 .contact-slider {
   margin-bottom: 87px;
 
-  &__item {
-    position: relative;
-    width: 175px !important;
-    margin-bottom: 21px;
+  &__box {
+  position: relative;
+  width: 175px;
+  // width: 175px !important;
+  margin-bottom: 21px;
+  // width: 100% !important;
 
-    &:hover {
-      .contact-slider__link {
-        opacity: 1;
-      }
+  &:hover {
+    .contact-slider__link {
+      opacity: 1;
     }
   }
+}
 
   &__image {
-    width: 170px;
+    max-width: 170px;
+    width: 100%;
     height: 170px;
     object-fit: cover;
   }
