finished without review

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -52,25 +52,25 @@
 
 // === WIDTH < 1040px ===
 @media (max-width: 1040px) {
-.blog__inner{
-  flex-wrap: wrap;
-}
+  .blog__inner {
+    flex-wrap: wrap;
+  }
 
-.blog__items{
-  max-width: 100%;
-}
+  .blog__items {
+    max-width: 100%;
+  }
 
-.blog__item-image {
-  max-width: 100%;
-  width: 100%;
-}
+  .blog__item-image {
+    max-width: 100%;
+    width: 100%;
+  }
 
-.aside{
-  order: -1;
-  margin-bottom: 50px;
-  margin-left: 0;
-  width: 100%;
-}
+  .aside {
+    order: -1;
+    margin-bottom: 50px;
+    margin-left: 0;
+    width: 100%;
+  }
 }
 // === / WIDTH < 1040px ===
 
@@ -401,13 +401,44 @@
     margin-right: 10px;
   }
 
-  .blog__blockquote{
+  .blog__blockquote {
     padding: 35px;
+    font-size: 20px;
+    line-height: 35px;
   }
 
-  .blog__blockquote{
-    font-size: 20px;
-  line-height: 35px;
+  .blog-one__link span {
+      display: none;
+  }
+
+  .blog-one__links{
+    padding: 30px 0;
+  }
+
+  .blog-one__comments-item{
+    flex-wrap: wrap;
+  }
+
+  .blog-one__comments-avatar{
+    width: 45px;
+    height: 45px;
+  }
+
+  .blog-one__comments-info{
+    margin-top: -46px;
+  }
+
+  .blog-one__comments-name,
+  .blog-one__comments-date{
+    margin-left: 55px;
+  }
+
+  .blog-one__comments-reply{
+    margin: 30px auto 0;
+  }
+
+  .blog-one__form-input {
+    width: 100%;
   }
 }
 // === / WIDTH < 540px ===
@@ -447,6 +478,10 @@
 
   .slick-dots li {
     margin: 0 1.5px;
+  }
+
+  .blog-one__item blockquote {
+    padding: 0 20px;
   }
 }
 // === / WIDTH < 375px ===
